# JPCPathTracer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Readme.md  python_c.md  setup.py  test.py
jpctracer/c/: CMakeLists.txt
jpctracer/c/include/: jpc_api.h  jpc_prefabs.h
jpctracer/c/libs/: CMakeLists.txt
jpctracer/c/src/: algorithms.h  allocators.c  allocators.h  allocators.hpp  bsdf.c  bsdf.cpp  bsdf.h  bsdf.hpp  bvh.c  bvh.cpp  bvh.h  camera.c  camera.h  compiler_builtins.h  config.h  geom_log.cpp  geom_log.h  integrator.c  integrator.h  intersect.h  intersect.hpp  iterator.h  lbvh.c  lbvh.cpp  lbvh.h  lbvh.hpp  lights.c  lights.h  load_fbx.c  load_yaml.cpp  maths.h  prefabs.c  renderer.c  renderer.h  sampler.c  sampler.h  sampling.c  sampling.h  scattering.c  scattering.h  (+8 more)
jpctracer/c_tests/: CMakeLists.txt  Timer.h  bvh_comparision_test.cpp  bvh_comparision_test_old.cpp  bvh_test.c  bvh_test.cpp  bvh_test_old.c  dataformat.c  integrator.c  intersect_wrapper.hpp  intervall_test.cpp  load_fbx.c  load_scene.c  scene.yaml  test_yaml.yaml
jpctracer/c_tests/compiler_explorer/: a.out  sort_branch.cpp
jpctracer/c_tests/skatche/: a  bitmask.cpp
jpctracer/c_tests/test_scenes/: CMakeLists.txt  scene1.c  scene_blue_monkey.c
jpctracer/cpp/: CMakeLists.txt  a.out  algorithms.hpp  geometry.cpp  geometry.hpp  handle_vector.hpp  iterator_adapter.h  random_geometry.cpp  random_geometry.hpp  test_handle_vector.cpp  test_scene.cpp  test_variant.cpp
src/: CMakeLists.txt
src/accelerators/: BVHAccel.cpp  BVHAccel.h  BVHHelperStructs.cpp  BVHHelperStructs.h  CMakeLists.txt
src/app/: Archive.cpp  Archive.h  CMakeLists.txt  ParseGeometry.cpp  ParseRenderer.cpp  ParseScene.h  main.cpp  materials.cpp
src/benchmarks/: CMakeLists.txt  main_benchmark.cpp  test.cpp
src/benchmarks/math/: Vector.cpp
src/benchmarks/tracing_performance/: TracingTest.cpp
src/bsdfs/: BSDF.cpp  BSDF.h  BeckmannDistribution.cpp  BeckmannDistribution.h  CMakeLists.txt  CookTorranceBSDF.cpp  CookTorranceBSDF.h  DielectricFresnel.cpp  DielectricFresnel.h  DiffuseBxdf.cpp  DiffuseBxdf.h  IBXDF.h  IFresnel.h  IMicrofacetDistribution.h  LambertianBRDF.cpp  LambertianBRDF.h  LambertianBSDF.cpp  LambertianBSDF.h  MicrofacetHelper.cpp  MicrofacetHelper.h  SphericalCoordinates.cpp  SphericalCoordinates.h  TorranceSparrowBRDF.cpp  TorranceSparrowBRDF.h
src/cameras/: CMakeLists.txt  ProjectionCamera.cpp  ProjectionCamera.h
src/color/: CMakeLists.txt  ColorValue.cpp  ColorValue.h
src/console_ui/: CMakeLists.txt  main.cpp
src/core/: Base.h  Bounds2D.h  Bounds3D.h  Bsdf.cpp  Bsdf.h  BsdfGeneric.h  CMakeLists.txt  FilmTile.cpp  FilmTile.h  IBSDF.h  ICamera.h  IFilm.h  IFilter.h  IIntegrator.h  ILight.h  IMaterial.h  IRenderer.h  ISampler.h  IScene.h  IShape.h  Linalg.h  MemoryArea.cpp  MemoryArea.h  Ray.h  Spectrum.h  SpectrumPasses.cpp  SpectrumPasses.h  SurfaceInteraction.h  SurfaceProperties.h  Transformation.cpp  Transformation.h  constants.h
src/debug_helper/: CMakeLists.txt  DebugFilm.cpp  DebugFilm.h
src/demos/: CMakeLists.txt
src/demos/demo1/: CMakeLists.txt  main.cpp
src/demos/demo3/: CMakeLists.txt  main.cpp  scene_setup.cpp  scene_setup.h
src/demos/demo4/: CMakeLists.txt  main.cpp
src/demos/materials/: CMakeLists.txt
src/experiments/: CMakeLists.txt
src/experiments/BsdfFactory/: CMakeLists.txt  main.cpp
src/experiments/demo1/: CMakeLists.txt  main.cpp
src/experiments/glossy_bsdf/: CMakeLists.txt  main.cpp
src/experiments/mirror_bsdf/: CMakeLists.txt  main.cpp
src/experiments/samplers/: CMakeLists.txt  main.cpp  plot.py
src/experiments/texture1/: CMakeLists.txt  main.cpp
src/films/: BasicFilm.cpp  BasicFilm.h  CMakeLists.txt
src/filters/: CMakeLists.txt  GaussianFilter.cpp  GaussianFilter.h
src/integrators/: BasicIntegrator.cpp  BasicIntegrator.h  CMakeLists.txt  DebugBsdfIntegrator.cpp  DebugBsdfIntegrator.h  DebugIntegrator.cpp  DebugIntegrator.h  LightIntegrator.cpp  LightIntegrator.h  PathIntegrator.cpp  PathIntegrator.h
src/jpc_tracer/: CMakeLists.txt  Concepts.h  JPCTracer.h
src/jpc_tracer/accelerators/: BVHAccel.cpp  BVHAccel.h  BVHHelperStructs.cpp  BVHHelperStructs.h  CMakeLists.txt  LBVH.cpp  LBVH.h
src/jpc_tracer/bsdfs/: BeckmannDistribution.h  CMakeLists.txt  CookTorranceBSDF.h  DielectricFresnel.cpp  SphericalCoordinates.h
src/jpc_tracer/cameras/: CameraConcepts.h  ProjectionCamera.cpp  ProjectionCamera.h  cameras.h
src/jpc_tracer/color/: ColorValue.cpp  ColorValue.h
src/jpc_tracer/core/: Base.h  Bounds2D.h  Bounds3D.h  Bsdf.cpp  Bsdf.h  BsdfGeneric.h  CMakeLists.txt  Concepts.h  FilmTile.cpp  FilmTile.h  IAccelerator.h  IAnimated.h  ICamera.h  IFilm.h  IFilter.h  IGeometryRange.h  IIntegrator.h  ILight.h  IMaterial.h  IRenderer.h  ISampler.h  IScene.h  IShape.h  JPCPathtracerApi.cpp  JPCPathtracerApi.h  Linalg.h  Logger.cpp  Logger.h  MaterialType.h  MonteCarlo.cpp  MonteCarlo.h  Ray.h  Spectrum.h  SpectrumPasses.cpp  SpectrumPasses.h  SurfaceInteraction.h  SurfaceProperties.h  Transformation.h  View.h  archetypes.h  (+1 more)
src/libs/: CMakeLists.txt
src/lights/: DirectionalLight.cpp  DirectionalLight.h  PointLight.cpp  PointLight.h
src/materials/: BasicMaterial.cpp  BasicMaterial.h  CMakeLists.txt  GlossyMaterial.cpp  GlossyMaterial.h
src/raytracing_core/: CMakeLists.txt  Geometry.h  Logger.cpp  Logger.h  Scene.h  SurfaceInteraction.h  TraceRay.h  TracingEngine.h
src/renderers/: BasicRenderer.cpp  BasicRenderer.h  CMakeLists.txt
src/samplers/: CMakeLists.txt  DebugSampler.cpp  DebugSampler.h  SphereSamplers.cpp  SphereSamplers.h  StrafifiedSampler.cpp  StratifiedSampler.h
src/scenes/: BVHScene.cpp  BVHScene.h  BasicScene.cpp  BasicScene.h  CMakeLists.txt
src/shapes/: CMakeLists.txt  Sphere.cpp  Sphere.h  Triangle.cpp  TriangleMesh.cpp  TriangleMesh.h
src/tests/: CMakeLists.txt  test_utils.h
src/textures/: Texture.cpp  Texture.h
src/utilities/: CMakeLists.txt  ImageIO.cpp  ImageIO.h  arithmetic.cpp  arithmetic.h  objLoader.cpp  objLoader.h  printerHelper.cpp  printerHelper.h  textureLoader.cpp  textureLoader.h
(+538 files in other folders)
