add_subdirectory(libs)
add_subdirectory(console_ui)
add_subdirectory(core)
add_subdirectory(textures)
add_subdirectory(color)
add_subdirectory(shapes)
add_subdirectory(utilities)
add_subdirectory(samplers)
add_subdirectory(cameras)
add_subdirectory(lights)
add_subdirectory(integrators)
add_subdirectory(scenes)
add_subdirectory(films)
add_subdirectory(filters)
add_subdirectory(renderers)
add_subdirectory(bsdfs)
add_subdirectory(materials)
add_subdirectory(tests)
add_subdirectory(accelerators)